Make clip() output as comma-seperated.

serialize value of clip attribute expected as comma-seperated.
So change it from space-separated to comma-seperated.

Bug: 779873
Change-Id: Ia2726bd1fcfa0b5c9e4eca1fcd71a4d4f269c332
Reviewed-on: https://chromium-review.googlesource.com/760178
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Commit-Queue: Shanmuga Pandi <shanmuga.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#516317}
Former-commit-id: 574061c0705e35233fa667e969bc66e9403146ff